fix: remove flex-wrap from Checkbox (#1700)

--- a/packages/semi-foundation/checkbox/checkbox.scss
+++ b/packages/semi-foundation/checkbox/checkbox.scss
@@ -12,7 +12,6 @@ $module: #{$prefix}-checkbox;
     position: relative;
     display: flex;
     align-items: flex-start;
-    flex-wrap: wrap;
     @include font-size-regular;
     cursor: pointer;
     transition: background-color $transition_duration-checkbox-bg $transition_function-checkbox-bg $transition_delay-checkbox-bg,
